# ProjectEstimator

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  Distribution.cpp  Distribution.hpp  NormalDistribution.cpp  NormalDistribution.hpp  Project.cpp  Project.hpp
src/: CMakeLists.txt  main.cpp
